--- a/apply-css.html
+++ b/apply-css.html
@@ -7,7 +7,7 @@
     <title>Applying CSS to HTML Document</title>
 
     <link rel="stylesheet" href="normalize.css" media="screen">
-    <link rel="stylesheet" href="resets.css" media="screen">
+    <link rel="stylesheet" href="reset.css" media="screen">
     <link rel="stylesheet" href="styles.css" media="screen">
 
     <ul class = "mainnav">
